SCTCD-787 Added horizontal scrollbar for images with fixed size.

--- a/gui/src/components/Page/Page.less
+++ b/gui/src/components/Page/Page.less
@@ -82,6 +82,10 @@
                 }
             }
         }
+
+        img[width] {
+            max-width: unset;
+        }
     }
 
     .sdl-image-lightbox-preview-wrapper {
